
Version 6.3 - not yet released
* devices
  - COM port monitor
* map
  - airspace rendering fixed
  - show new map items list on click
  - reduce map jiggling, improved E Ink display support
* user interface
  - show METAR data in natural language
  - sort METAR stations by name
  - added kinetic scrolling for non-WinCE platforms
* internet
  - added LiveTrack24 live tracking

Version 6.2.3 - not yet released
* calculations
  - show correct "next distance" even if glide solver fails
  - don't discard manual wind when auto wind is disabled
  - fix memory leak
* user interface
  - reduce menu flickering
  - fix crash in waypoint list dialog when waypoints have large comments
  - prevent waypoint editing if waypoint file is read-only
* data files
  - Automatically try to detect character encoding of airfield details file
  - speed up waypoint/airspace loading
* logger
  - Added competition id to IGC file output
* Linux
  - display error message when fonts could not be loaded
* Mac OS X
  - initial public release, distributed in a DMG package

Version 6.2.2 - 2011/11/04
* devices
  - save the "bulk baud rate" setting
  - don't auto-restart NMEAOut and XCOM760
* calculations
  - fix instant L/D formula
  - fix malformed F records in IGC files
  - minor fix for FLARM stealth calculations
  - fix auto QNH formula
  - fix reach/route arrival calculations with strong wind
* user interface
  - fixed several minor bugs in the plane database dialog
  - fix MacCready steps for knots and ft/min
  - manual and translation updates
  - support "airspace margin" setting for "All below"
  - fix crash in font editor
* data files
  - fixed bugs in TNP airspace file parsing
* Android
  - acquire "Vibrate" permission

Version 6.2.1 - 2011/09/26
* faster METAR and TAF download
* devices
  - FLARM: clear old barometric altitude as soon as FLARM is detected
* user interface
  - show validation errors before task declaration
* Windows / Altair