@@ -15,6 +15,8 @@ Version 6.3 - not yet released
   - added kinetic scrolling for non-WinCE platforms
 * internet
   - added LiveTrack24 live tracking
+* Android
+  - support reverse screen modes for Galaxy Tab
 
 Version 6.2.3 - not yet released
 * calculations
